# shotgunCV

./: .env.example  .gitignore  .ignore  README.md  agent.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/designing-ai-feedback-control/: SKILL.md
.agents/skills/designing-ai-trustworthy-interfaces/: SKILL.md
.agents/skills/designing-saas-data-tables/: SKILL.md
.agents/skills/designing-saas-design-systems/: SKILL.md
.agents/skills/designing-saas-operational-workspaces/: SKILL.md
apps/cli/: README.md
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: runs.test.tsx  runs.ts  types.ts  upload-drafts.ts
apps/web/scripts/: check-zh-dominance.mjs
docs/: README.md  conventions.md  decision-log.md  evaluation-design.md  frontend-next-round-mockup.html  plan.md  product-requirements.md  repo-blueprint.md  system-design.md
examples/: README.md  cli-openai-run.md  cli-run.md  web-viewer.md
fixtures/: README.md
fixtures/candidates/: base_resume.md
fixtures/jds/: sample_batch.txt
logs/: llm_calls.jsonl
runs/demo/analyze/: candidate_profile.json
runs/demo/evaluate/: eval_summary.json
runs/demo/generate/: resume_variants.json
runs/demo/report/: summary.md
runs/local-demo/analyze/: jd_profiles.json
runs/local-demo/config/: run_config.json
tests/: conftest.py  test_cli_pipeline.py  test_cli_surface.py  test_domain_models.py  test_input_documents.py  test_repo_blueprint.py  test_run_config_and_providers.py  test_run_pipeline.py
(+53 files in other folders)
